TodoAppConfig/todoappingress-k8s.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: todoappingress
spec:
  rules:
  - host: todoapp.com    #write this to etc/host
    http:
      paths:
      - path: /
        backend:
          serviceName: todoappclient-svc
          servicePort: 80 
      - path: /todos
        backend:
          serviceName: todoappserver-svc
          servicePort: 8080
